[gd_scene load_steps=3 format=3 uid="uid://ck6mkwfqepp1x"]

[ext_resource type="Script" path="res://scenes/audio_manager.gd" id="1_3hahc"]
[ext_resource type="AudioStream" uid="uid://txadfdwmqgcm" path="res://assets/audio/Valorant  Footstep Sound Effect.mp3" id="2_r455f"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_3hahc")

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="SFXStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="WalkSFXStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_r455f")
bus = &"SFX"
